authn and authz working

--- a/firebase-ios-auth/Podfile
+++ b/firebase-ios-auth/Podfile
@@ -8,5 +8,6 @@ target 'firebase-ios-auth' do
   # Pods for firebase-ios-auth
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
+  pod 'Firebase/Database'
 
 end
