stable version of profile view

--- a/firebase-ios-auth/Podfile
+++ b/firebase-ios-auth/Podfile
@@ -9,5 +9,6 @@ target 'firebase-ios-auth' do
   pod 'Firebase/Core'
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
+  pod 'ObjectMapper', '~> 2.2'
 
 end
