--- a/firebase-ios-auth/Podfile
+++ b/firebase-ios-auth/Podfile
@@ -10,5 +10,6 @@ target 'firebase-ios-auth' do
   pod 'Firebase/Auth'
   pod 'Firebase/Database'
   pod 'ObjectMapper', '~> 2.2'
+  pod 'SwiftGen'
 
 end
